Screenshotlibrary endpoints  (#75)
* added an api to retrieve tag and view names (for predictive text)
and added an api for metrics on tags and views to show top views and tags.

* updated swagger description and updated default limit

* added swagger details and fix to api
